--- a/gb/16/7/25/n8136644.md
+++ b/gb/16/7/25/n8136644.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/iqqfyj3004/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/iqqfyj3004/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/iqqfyj3004/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>这10个习惯 帮你提高一倍学习效率</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/07/1507061353202483-600x400.jpg" />
 <h6>亚洲学生在教室一起学习（fotolia）
 </h6>
 <hr>
 	<p>【大纪元2016年07月26日讯】（大纪元记者陈洁云编译报导）科技创新领域的发展，带动当今世界处于不断变化中。一年前还很热门的东西，今天可能已不再适用——从脸书创建后涌现了多少社交媒体平台就可见一斑。变化诚然带来诸般好处，但你必须跟上它，不然在人力市场上就可能掉队。而保有优势的最佳途径，就是培养一些可帮你快速掌握新技能的习惯。</p>
-<p>美国《创业家》（Entrepreneur）杂志网日前刊出学习<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E6%8A%80%E8%83%BD%E5%9F%B9%E5%85%BB.md#1">技能培养</a>机构<ahref="http://skillincubator.com/" target="_blank">Skill Incubator</a>创始人兼CEO克里斯?邓恩（Chris W. Dunn）的专文，向读者介绍了10种习惯，希望能帮助大家将<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E9%80%9F%E5%BA%A6.md#1">学习速度</a>提升一倍。</p>
+<p>美国《创业家》（Entrepreneur）杂志网日前刊出学习<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8A%80%E8%83%BD%E5%9F%B9%E5%85%BB.md#1">技能培养</a>机构<ahref="http://skillincubator.com/" target="_blank">Skill Incubator</a>创始人兼CEO克里斯?邓恩（Chris W. Dunn）的专文，向读者介绍了10种习惯，希望能帮助大家将<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E9%80%9F%E5%BA%A6.md#1">学习速度</a>提升一倍。</p>
 <h3>1. 速读。</h3>
 <p>很多成功的企业家日常都有阅读习惯，如沃伦?巴菲特每天要读上几个小时，阅读量达数百页。</p>
 <p>常人的平均阅读速度为每分钟200到400个英文单词。而专业级的速读者每分钟可读1,000到1,700个单词。由此，快速高效阅读的能力具有巨大价值就毫不奇怪了。</p>
-<figure id="attachment_8136672" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/07/1605201704182483.jpg"><img class="wp-image-8136672 size-medium" title="Asian student in uniform reading in the library at university" src="https://i.epochtimes.com/assets/uploads/2016/07/1605201704182483-450x300.jpg" alt="Asian student in uniform reading in the library at university" width="450" b="300" /></a><figcaption class="wp-caption-text">专业级的速读者每分钟可读1,000到1,700个单词。（fotolia）</figcaption></figure>
+<figure id="attachment_8136672" aria-describedby="caption-attachment-8136672" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/07/1605201704182483.jpg"><img class="wp-image-8136672 size-medium" title="Asian student in uniform reading in the library at university" src="https://i.epochtimes.com/assets/uploads/2016/07/1605201704182483-450x300.jpg" alt="Asian student in uniform reading in the library at university" width="450" b="300" /></a><figcaption id="caption-attachment-8136672" class="wp-caption-text">专业级的速读者每分钟可读1,000到1,700个单词。（fotolia）</figcaption></figure>
 <p>速读技能包括分块阅读（即一下子读一组词而不是一个单词）、最大限度减少默读（即克服在头脑中读出来的习惯）、略读法（速读一个段落以找出重要信息）以及指示法（使用笔等工具来引阅读视线）等。</p>
 <p>快速阅读需要练习，而一旦你让此技能形成习惯，就可以更短时间内获取更多信息。</p>
 <h3>2. 掌控学习环境。</h3>
@@ -21,8 +21,8 @@
 <h3>3. 手写笔记。</h3>
 <p>记笔记可以帮助我们对正在学习的信息进行分析和综合。记录的动作会让大脑认为，我们正对信息进行迷你“排练”。</p>
 <p>研究表明，学生用键盘记笔记，不如用手写那样能帮助记忆。写作比敲键盘要慢得多，写的时候，我们不得不对我们听到的信息进行快速的判断。而当我们在电脑上输入时，往往并没有在思考这些信息，只是将其逐字拷贝下来。</p>
-<figure id="attachment_8136673" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/07/1604131517192483.jpg"><img class="wp-image-8136673 size-medium" title="Teenage Girl Studying At Desk In Bedroom" src="https://i.epochtimes.com/assets/uploads/2016/07/1604131517192483-450x329.jpg" alt="Teenage Girl Studying At Desk In Bedroom" width="450" b="329" /></a><figcaption class="wp-caption-text">学生用键盘记笔记，不如用手写那样能帮助记忆。（fotolia）</figcaption></figure>
-<p>要提高<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E9%80%9F%E5%BA%A6.md#1">学习速度</a>，应试培养手写笔记的习惯。邓恩本人很喜欢用Evernote等工具将所有笔记在所有电子设备上同步。Evernote 可以扫描和读取手写笔记，还能跟踪音频笔记。这给了邓恩永远不会把重要笔记放错地方的信心。</p>
+<figure id="attachment_8136673" aria-describedby="caption-attachment-8136673" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/07/1604131517192483.jpg"><img class="wp-image-8136673 size-medium" title="Teenage Girl Studying At Desk In Bedroom" src="https://i.epochtimes.com/assets/uploads/2016/07/1604131517192483-450x329.jpg" alt="Teenage Girl Studying At Desk In Bedroom" width="450" b="329" /></a><figcaption id="caption-attachment-8136673" class="wp-caption-text">学生用键盘记笔记，不如用手写那样能帮助记忆。（fotolia）</figcaption></figure>
+<p>要提高<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E9%80%9F%E5%BA%A6.md#1">学习速度</a>，应试培养手写笔记的习惯。邓恩本人很喜欢用Evernote等工具将所有笔记在所有电子设备上同步。Evernote 可以扫描和读取手写笔记，还能跟踪音频笔记。这给了邓恩永远不会把重要笔记放错地方的信心。</p>
 <h3>4. 结合所有学习途径。</h3>
 <p>每个人都有自己喜欢的学习途径，包括视觉、听觉、阅读和触觉（英语里合称VARK）。如果你是一个视觉型的人，你会发现通过图片、图表或PowerPoint的呈现来学习容易得多；如果你是听觉型，那么你一定会喜欢播客（podcast）、访谈录音和有声读物；阅读型的人则在阅读、记笔记的情况下学得最好；而如果你偏于触觉型，用触觉或自己动手做一遍会印象最深。</p>
 <p>了解自己的首选学习途径，可以加快信息的吸收；而要学得更快，则不妨结合所有途径。比方说，如果你正在阅读有关编程技巧的文章，可大声读出来，绘制一幅思维导图，然后立即试着在自己的网站上加以运用。</p>
@@ -32,18 +32,18 @@
 <h3>6. 锻练你的大脑。</h3>
 <p>大脑就像身体的肌肉一样，越用越好用。尝试学习新东西，为自己设定新的挑战，或利用益智题库BrainHQ等趣味性资源如BrainHQ和Lumosity来增强专注力、记忆力和认知能力，并提升思维速度。锻练大脑越勤，学习速度越快。</p>
 <h3>7. 听诱导α脑波状态的音乐。</h3>
-<p>我们的脑电波模式有四个主要类型：α，β，δ和θ。其中，α状态（约8至13赫兹）是我们专注力和<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%95%88%E7%8E%87.md#1">学习效率</a>最高的状态。</p>
+<p>我们的脑电波模式有四个主要类型：α，β，δ和θ。其中，α状态（约8至13赫兹）是我们专注力和<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%95%88%E7%8E%87.md#1">学习效率</a>最高的状态。</p>
 <p>你可以边学习边聆听频率在8至13赫兹之间的α脑波音乐（如巴洛克音乐），将脑电波调适到α波状态。如果你不喜欢巴洛克音乐，也可以选用有类似节拍的其它类型音乐。尽量别听有歌词的歌曲，以免分散注意力。</p>
-<figure id="attachment_8136686" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-8136686 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/07/man-571051_960_720-450x300.jpg" alt="man-571051_960_720" width="450" b="300" /><figcaption class="wp-caption-text">边学习边聆听频率在8至13赫兹之间的音乐可提升<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%95%88%E7%8E%87.md#1">学习效率</a>。(pixabay)</figcaption></figure>
+<figure id="attachment_8136686" aria-describedby="caption-attachment-8136686" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/07/man-571051_960_720-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8136686 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/07/man-571051_960_720-450x300.jpg" alt="man-571051_960_720" width="450" b="300" /></a><figcaption id="caption-attachment-8136686" class="wp-caption-text">边学习边聆听频率在8至13赫兹之间的音乐可提升<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%95%88%E7%8E%87.md#1">学习效率</a>。(pixabay)</figcaption></figure>
 <h3>8. 六个小时后改变练习方法。</h3>
 <p>《纽约客》杂志撰稿人马尔科姆?格拉德威尔（Malcolm Gladwell）在其2008年的畅销书《异类：不一样的成功启示录》（Outliers: The Story of Success）中提出了“刻意练习”的概念。刻意练习就是专注于提升技能、离开自己舒适地带的反复练习。在书中，格拉德威尔用刻意练习的概念来解释为什么有些运动员和音乐家提高得比别人快得多。</p>
 <p>最近的研究则发现，只要稍微改变练习方法，就可以提高学习速度，在学习运动技能时尤其如此。这是因为调整练习过程可巩固大脑，借助新的知识来强化既有记忆。由此，你可在第一次练习的六小时后稍微改变方法再练习，因为巩固大脑大约需要六小时时间。</p>
 <h3>9. 获取实践经验。</h3>
-<p>没有什么<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%96%B9%E6%B3%95.md#1">学习方法</a>比实际动手更有效了。当与实用知识相结合时，课本上的知识就变得很有用了。比如说，关于投资股票你可以读很多东西，但只有当你实际购买你的第一只股票时，你才会明白这个过程意味着什么，以及把钱投入市场是怎么一回事。</p>
+<p>没有什么<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%96%B9%E6%B3%95.md#1">学习方法</a>比实际动手更有效了。当与实用知识相结合时，课本上的知识就变得很有用了。比如说，关于投资股票你可以读很多东西，但只有当你实际购买你的第一只股票时，你才会明白这个过程意味着什么，以及把钱投入市场是怎么一回事。</p>
 <p>另一种方法是完全沉浸在学习经验中。例如，如果你想学西班牙语，可花几个月时间生活在墨西哥，此间不要使用任何母语，这比你借助有声读物和教科书来学习要快得多。</p>
 <h3>10. 把你正在学习的东西教给别人。</h3>
 <p>当你教别人自己所学东西时，你可以记住其中的九成左右——俗话所说的“现学现卖”效果更好。</p>
-<figure id="attachment_8136674" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/07/1511231412542483.jpg"><img class="wp-image-8136674 size-medium" title="教师，学生，青少年。（fotolia）" src="https://i.epochtimes.com/assets/uploads/2016/07/1511231412542483-450x306.jpg" alt="教师，学生，青少年。（fotolia）" width="450" b="306" /></a><figcaption class="wp-caption-text">“现学现卖”能让你很快发现自己掌握得怎样、有什么疏漏。（fotolia）</figcaption></figure>
+<figure id="attachment_8136674" aria-describedby="caption-attachment-8136674" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/07/1511231412542483.jpg"><img class="wp-image-8136674 size-medium" title="教师，学生，青少年。（fotolia）" src="https://i.epochtimes.com/assets/uploads/2016/07/1511231412542483-450x306.jpg" alt="教师，学生，青少年。（fotolia）" width="450" b="306" /></a><figcaption id="caption-attachment-8136674" class="wp-caption-text">“现学现卖”能让你很快发现自己掌握得怎样、有什么疏漏。（fotolia）</figcaption></figure>
 <p>通过与他人分享你的知识，你不仅是在帮助别人，也能很快发现你掌握得怎样、有什么疏漏。</p>
 <p>邓恩总结说，培养这十个学习习惯，你会惊奇地发现自己的学习速度提升得多么快。</p>
 <p>责任编辑：茉莉</p>
@@ -52,42 +52,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/15/3/26/n4396644.md#1">自主学习能力 社会核心的竞争力</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/15/8/30/n4515914.md#1">英文见字就能念 直觉美语帮了我</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/1/5/n4609565.md#1">四国学者研究结果：阅读书写靠左脑运作</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/6/6/n7968192.md#1">学习语言的最佳方案</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/3/26/n4396644.md#1">自主学习能力 社会核心的竞争力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/8/30/n4515914.md#1">英文见字就能念 直觉美语帮了我</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/5/n4609565.md#1">四国学者研究结果：阅读书写靠左脑运作</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/6/6/n7968192.md#1">学习语言的最佳方案</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/27/n10812825.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（4）</a></li><li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/12/n10137177.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7929122.md#1" target="_blank">九十五岁老人对法轮大法的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/20/n12416763.md#1">译成34种语言 一部童话触动世界人的心灵</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/18/n12412674.md#1">上善若水，水善利万物而不争</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/23/n12423944.md#1">女子濒死在隧道中高速飞行 还与耶稣对话</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/8/n12388919.md#1">灵魂在阴间受刑？古籍记载人身病痛另有缘由</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/27/n12433623.md#1">【老外看中国】美议员克鲁兹：台湾是自由灯塔</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/8/31/n12370577.md#1">【思想领袖】参议员柯顿：中共对美不宣而战</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430820.md#1">【新闻看点】中共外交官发飙 联大决议删习语录</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430764.md#1">红二代与习近平决裂 对习杀伤力非常大</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429962.md#1">中共病毒突变 戴口罩洗手恐怕都不管用</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12428212.md#1">【新闻看点】遭美重击北京狂扰台海 美军重返台？</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429560.md#1">黄鸿升今火化 峮峮痛哭 杨丞琳送最后一程</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430391.md#1">黄鸿升花葬阳明山 宪哥曝遗容“很帅像睡觉”</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430801.md#1">黄鸿升长眠阳明山 生前IG转为纪念账号</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12428559.md#1">周润发行山邂逅网友 听到公益计划立马掏腰包</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12428038.md#1">朱孝天宠妻如宠女 因遗传病没打算生小孩</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12427711.md#1">驼背是肺的大敌！3招练胸背肌 改善驼背又强肺</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/26/n12431601.md#1">车评：完美的油电混合 2020 Lexus RX450h F Sport</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430512.md#1">日本前首相医师：这样站立2分钟 等于走路1小时</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/23/n12425078.md#1">6类人易得退化性关节炎 医师：做对运动护膝盖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/iqqfyj3004/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/iqqfyj3004/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/7/25/n8136644.htm">这10个习惯 帮你提高一倍学习效率</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/7/25/n8136644.htm">这10个习惯 帮你提高一倍学习效率</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/iqqfyj3004/djy/blob/master/gb/16/7/25/n8136644.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/iqqfyj3004/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iqqfyj3004/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/16/7/25/n8136644.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
